--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -37,7 +37,8 @@ jobs:
         uses: hashicorp/setup-terraform@v3
       - name: terraform init
         id: init
-        run: terraform init -backend-config="bucket=$BUCKET_TF_STATE"
+        # run: terraform init -backend-config="bucket=$BUCKET_TF_STATE"
+        run: terraform init -backend-config="bucket=gitops-application001-terrafrom-repository"
       - name: terraform format
         id: fmt
         run: terraform fmt -check
