--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: terraform init
         id: init
         # run: terraform init -backend-config="bucket=$BUCKET_TF_STATE"
-        run: terraform init -backend-config="bucket=gitops-application001-terrafrom-repository"
+        run: terraform init
       - name: terraform format
         id: fmt
         run: terraform fmt -check
